<resources>
    <string name="app_name">Pratham Digital</string>
    <string name="search_content">Search Content</string>
    <string name="Sign_In">Sign In</string>
    <string name="view_library">View Your Library Here</string>
    <string name="view_contents">All your contents can be accessed from here.</string>
    <string name="view_recommended">View the recommended contents here</string>
    <string name="download_recommended">Download the recommended contents from here.</string>
    <string name="search_contents_from_here">Search any content from here</string>
    <string name="search_and_download">Search and Download any content fromm here</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="provide_storage_permission">Provide Permission for storage first</string>
    <string name="select_language">Select your language</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="my_library">Library</string>
    <string name="recommended">Recommended</string>
    <string name="search">Search</string>
    <string name="language">Language</string>
    <string name="no_data_downloaded">Please download the contents.</string>
    <string name="no_content">Seems no content is available right now!</string>
    <string-array name="search_tags">
        <item>English</item>
        <item>Maths</item>
        <item>Games</item>
        <item>Science</item>
        <item>Dekho or Seekho</item>
    </string-array>
    <string-array name="main_contents">
        <item>Age 3–6\nKhelbadi</item>
        <item>Age 6–10\nKhelpuri</item>
        <item>Age 8–14\nDekho Aur Sikho</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>हिंदी</item>
        <item>मराठी</item>
        <item>ಕನ್ನಡ</item>
        <item>తెలుగు</item>
        <item>বাংলা</item>
        <item>ગુજરાતી</item>
        <item>ਪੰਜਾਬੀ</item>
        <item>தமிழ்</item>
        <item>অসমীয়</item>
        <item>ଓଡ଼ିଆ</item>
        <!--<item>മലയാളം</item>-->
    </string-array>
    <string-array name="main_languages">
        <item>English</item>
        <item>Hindi</item>
        <item>Marathi</item>
        <item>Kannada</item>
        <item>Telugu</item>
        <item>Bengali</item>
        <item>Gujarati</item>
        <item>Punjabi</item>
        <item>Tamil</item>
        <item>Assamese</item>
        <item>Odiya</item>
        <!--<item>Malayalam</item>-->
    </string-array>
    <string name="evp_submit">SUBMIT</string>
    <string name="evp_retry">RETRY</string>
    <string name="downloading">Downloading...</string>
    <string name="please_wait">Please wait......</string>
    <string name="let_them_download">Let them download first!</string>
    <string name="press_again_to_exit">Press again to exit.</string>
    <string name="dialog_default_title">Are you sure!</string>
    <string name="something_went_wrong">Something went wrong.Please try again later..</string>
    <string name="provide_audio_permission">Provide audio recording permission.</string>
    <string name="fcm_message">Pratham FCM Message</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
</resources>
