<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/ghost_white"
        app:cardCornerRadius="@dimen/size_5"
        app:cardElevation="@dimen/size_5"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="@dimen/size_250"
            android:layout_height="@dimen/size_220">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/size_18"
                android:text="@string/select_language"
                android:textColor="@color/charcoal"
                android:textSize="@dimen/size_17sp" />

            <com.pratham.prathamdigital.custom.carousel.CarouselPicker
                android:id="@+id/lang_picker"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_100"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                app:items_visible="three" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/lang_okay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/okay"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/lang_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/size_15"
                    android:layout_marginStart="@dimen/size_15"
                    android:text="@string/cancel"
                    android:textColor="@color/charcoal"
                    android:textSize="@dimen/size_17sp" />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>